# libtwig

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: twig.pc.in
include/: twig.h  twig_bits.h  twig_dec.h  twig_priv.h  twig_regs.h  twig_video.h
include/allwinner/: README.md  cedardev_api.h  ion.h
include/priv/: twig_mem_priv.h  twig_priv.h  twig_video_priv.h
include/supp/: twig_bits.h  twig_regs.h
src/: twig.c  twig_alloc.c  twig_core.c  twig_dec.c  twig_fbm.c  twig_frame.c  twig_h264.c  twig_h264_dec.c  twig_h264_parse.c  twig_ion.c  twig_mem_ion.c  twig_mem_ve.c  twig_parse.c  twig_refs.c  twig_sbm.c  twig_video.c
src/buffer/: twig_sbm.c
src/mem/: twig_ion.c
src/vid/: twig_video.c
src/vid/h264/: twig_h264.c  twig_h264_parse.c
test/: BigBuckBunny_320x180_10s_x264.h264  bunny_10s_320x180.h264  decode_example.c  decode_test.c  first_frame_test.c  full_decode_test.c  test_frame.h264
